git module update from makerdao/dss to zorancuc/dss

--- a/.gitmodules
+++ b/.gitmodules
@@ -21,7 +21,7 @@
 	url = https://github.com/dapphub/ds-pause
 [submodule "lib/dss"]
 	path = lib/dss
-	url = https://github.com/makerdao/dss
+	url = https://github.com/zorancuc/dss
 [submodule "lib/esm"]
 	path = lib/esm
 	url = https://github.com/makerdao/esm
